--- a/app/src/main/res/layout/activity_patches.xml
+++ b/app/src/main/res/layout/activity_patches.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PatchesActivity">
+    tools:context=".PatchesActivity"
+    android:background="?attr/forumMainColor">
 
     <ListView
         android:id="@+id/patchesList"
