--- a/app/src/main/res/layout/design_patches.xml
+++ b/app/src/main/res/layout/design_patches.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/forumMainColor">
 
     <TextView
         android:id="@+id/title"
@@ -16,7 +17,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="TextView"
-        android:textColor="#000000"
+        android:textColor="?attr/baseColorInvert"
         android:textSize="25sp" />
 
     <LinearLayout
@@ -32,20 +33,8 @@
             android:layout_margin="0dp"
             android:gravity="center"
             android:text="TextView"
-            android:textColor="#000000" />
+            android:textColor="?attr/baseColorInvert" />
 
-        <View
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@drawable/action_download"
-            />
-
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Download"
-            android:textColor="#000000" />
     </LinearLayout>
 
     <TextView
@@ -60,7 +49,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="TextView"
-        android:textColor="#000000" />
+        android:textColor="?attr/baseColorInvert" />
 
     <TextView
         android:id="@+id/textView18"
@@ -69,7 +58,7 @@
         android:layout_margin="8dp"
         android:gravity="center"
         android:text="Changes"
-        android:textColor="#0A0000"
+        android:textColor="?attr/baseColorInvert"
         android:textSize="20sp" />
 
     <TextView
@@ -78,6 +67,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="TextView"
-        android:textColor="#000000" />
+        android:textColor="?attr/baseColorInvert" />
 
 </LinearLayout>
