File type forums added

--- a/app/src/main/res/layout/activity_write_new_forum_image.xml
+++ b/app/src/main/res/layout/activity_write_new_forum_image.xml
@@ -77,7 +77,7 @@
         android:background="?attr/baseColor1"
         android:backgroundTint="?attr/baseColor1"
         android:onClick="uploadFileAction"
-        android:text="Upload File"
+        android:text="Upload Image"
         android:textColor="?attr/baseColorInvert"
         android:textColorHint="?attr/baseColor1"
         android:textColorLink="?attr/baseColor1" />
